Update discoverer decoupled from readreplica
